// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetches values 1`] = `"Maurine"`;

exports[`fetches values 2`] = `
bound Array [
  "Edison",
  "Hilbert",
  "Danielle",
  "Maryse",
]
`;

exports[`fetches values 3`] = `"Miller"`;

exports[`fetches values 4`] = `
Object {
  "data": Object {
    "__typename": "Query",
    "arrayOfObjects": Array [
      Object {
        "__typename": "Object",
        "string": "Miller",
      },
      Object {
        "__typename": "Object",
        "string": "Millie",
      },
      Object {
        "__typename": "Object",
        "string": "Jennings",
      },
    ],
    "arrayOfString": Array [
      "Edison",
      "Hilbert",
      "Danielle",
      "Maryse",
    ],
    "string": "Maurine",
  },
  "types": Object {
    "Object": Object {
      "instances": Array [
        Object {
          "__typename": "Object",
          "string": "Miller",
        },
        Object {
          "__typename": "Object",
          "string": "Millie",
        },
        Object {
          "__typename": "Object",
          "string": "Jennings",
        },
      ],
      "keys": Object {},
    },
    "Query": Object {
      "instances": Array [
        Object {
          "__typename": "Query",
          "arrayOfObjects": Array [
            Object {
              "__typename": "Object",
              "string": "Miller",
            },
            Object {
              "__typename": "Object",
              "string": "Millie",
            },
            Object {
              "__typename": "Object",
              "string": "Jennings",
            },
          ],
          "arrayOfString": Array [
            "Edison",
            "Hilbert",
            "Danielle",
            "Maryse",
          ],
          "string": "Maurine",
        },
      ],
      "keys": Object {},
    },
    "String": Object {
      "instances": Array [
        "Maurine",
        "Edison",
        "Hilbert",
        "Danielle",
        "Maryse",
        "Miller",
        "Millie",
        "Jennings",
      ],
      "keys": Object {},
    },
    "[Object!]": Object {
      "instances": Array [
        Array [
          Object {
            "__typename": "Object",
            "string": "Miller",
          },
          Object {
            "__typename": "Object",
            "string": "Millie",
          },
          Object {
            "__typename": "Object",
            "string": "Jennings",
          },
        ],
      ],
      "keys": Object {},
    },
    "[String!]": Object {
      "instances": Array [
        Array [
          "Edison",
          "Hilbert",
          "Danielle",
          "Maryse",
        ],
      ],
      "keys": Object {},
    },
  },
}
`;

exports[`shares cache for arguments with/without variables 1`] = `"Mervin"`;

exports[`shares cache for arguments with/without variables 2`] = `"Mervin"`;

exports[`shares cache for arguments with/without variables 3`] = `
Object {
  "data": Object {
    "__typename": "Query",
    "arrayOfObjects(string:\\"test\\")": Array [
      Object {
        "__typename": "Object",
        "string": "Mervin",
      },
      Object {
        "__typename": "Object",
        "string": "Edison",
      },
      Object {
        "__typename": "Object",
        "string": "Hilbert",
      },
      Object {
        "__typename": "Object",
        "string": "Danielle",
      },
    ],
  },
  "types": Object {
    "Object": Object {
      "instances": Array [
        Object {
          "__typename": "Object",
          "string": "Mervin",
        },
        Object {
          "__typename": "Object",
          "string": "Edison",
        },
        Object {
          "__typename": "Object",
          "string": "Hilbert",
        },
        Object {
          "__typename": "Object",
          "string": "Danielle",
        },
      ],
      "keys": Object {},
    },
    "Query": Object {
      "instances": Array [
        Object {
          "__typename": "Query",
          "arrayOfObjects(string:\\"test\\")": Array [
            Object {
              "__typename": "Object",
              "string": "Mervin",
            },
            Object {
              "__typename": "Object",
              "string": "Edison",
            },
            Object {
              "__typename": "Object",
              "string": "Hilbert",
            },
            Object {
              "__typename": "Object",
              "string": "Danielle",
            },
          ],
        },
      ],
      "keys": Object {},
    },
    "String": Object {
      "instances": Array [
        "Mervin",
        "Edison",
        "Hilbert",
        "Danielle",
      ],
      "keys": Object {},
    },
    "[Object!]": Object {
      "instances": Array [
        Array [
          Object {
            "__typename": "Object",
            "string": "Mervin",
          },
          Object {
            "__typename": "Object",
            "string": "Edison",
          },
          Object {
            "__typename": "Object",
            "string": "Hilbert",
          },
          Object {
            "__typename": "Object",
            "string": "Danielle",
          },
        ],
      ],
      "keys": Object {},
    },
  },
}
`;
